--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,24 +1,30 @@
-header{
+header {
   background-color: grey;
   height: 100px;
-  width:100%;
+  width: 100%;
 }
-h1,h3{
-      margin-top: 0px;
-      text-align: center;
-padding-top: 20px;
-color: white;
+h1, h3 {
+  margin-top: 0px;
+  text-align: center;
+  padding-top: 20px;
+  color: white;
 }
-.navbar-default .navbar-nav>li>a{
+.navbar-default .navbar-nav>li>a {
   font-size: x-large;
 }
-
-footer{
+footer {
   background-color: grey;
-  margin-top:5%;
+  margin-top: 5%;
   height: 50px;
-  width:100%;
+  width: 100%;
 }
-.col-md-3{
-border: inset;
+.col-md-3 {
+  border: inset;
+}
+.well {
+  height: 500px!important;  
+}
+img {
+  float: left;
+  margin-right: 5%;
 }
