--- a/app/views/Product.html
+++ b/app/views/Product.html
@@ -1,6 +1,6 @@
 <div ng-controller="ProductController">
-  <div ng-repeat="product in products" class="well col-md-4">
+  <div ng-repeat="product in products" class="well col-md-3 col-md-offset-1">
     <img src="{{product.Image}}" alt="{{product.Name}}" class="img-responsive"/>
-    <span>{{product.Description}}</span>
+    <span>{{product.Description | cut:true:280}} <a href="">...Show more"</a></span>
   </div>
 </div>
