--- a/app/views/Product.html
+++ b/app/views/Product.html
@@ -1,6 +1,9 @@
 <div ng-controller="ProductController">
-  <div ng-repeat="product in products" class="well col-md-3 col-md-offset-1">
-    <img src="{{product.Image}}" alt="{{product.Name}}" class="img-responsive"/>
-    <span>{{product.Description | cut:true:280}} <a href="">...Show more"</a></span>
-  </div>
+  <div ng-repeat="product in products" class="well productContainer col-md-4 col-lg-4 col-sm-6 col-xs-6">
+    <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
+      <img src="{{product.Image}}" alt="{{product.Name}}" class="img-responsive"/>
+    </div>
+    <div read-more speed="3000" more-link="<a href='#Product/{{products.indexOf(product)}}'>Show more..</a>">
+              {{product.Description}}
+    </div>
 </div>
