--- a/app/views/Product.html
+++ b/app/views/Product.html
@@ -3,8 +3,8 @@
     <div class="col-md-6 col-lg-6 col-sm-6 col-xs-6">
       <img src="{{product.Image}}" alt="{{product.Name}}" class="img-responsive"/>
     </div>
-    <div read-more class="less1" more-link="<a href='#/Product/{{products.indexOf(product)}}'>Show more..</a>">
-      {{product.Description}}      
+    <div read-more more-link="<a class='readmorelink' href='#/Product/{{products.indexOf(product)}}'>Show more..</a>">
+      {{product.Description}}
     </div>
     <a href="#/Product/{{products.indexOf(product)}}" class="text-size">Read more..</a>
   </div>
