--- a/app/views/partial/Product-details.html
+++ b/app/views/partial/Product-details.html
@@ -18,7 +18,7 @@
 
     <h2>{{products[whichItem].Name}}</h2>
 
-    <div class="row well">
+    <div class="row well productsInternal">
       <a class="example-image-link col-xs-4" href="{{products[whichItem].subImages[0]}}" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="{{products[whichItem].thumbImages[0]}}" alt=""/></a>
       <a class="example-image-link col-xs-4" href="{{products[whichItem].subImages[1]}}" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="{{products[whichItem].thumbImages[1]}}" alt=""/></a>
       <a class="example-image-link col-xs-4" href="{{products[whichItem].subImages[2]}}" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="{{products[whichItem].thumbImages[2]}}" alt=""/></a>
